src/test/resources/typeSystemTestModels/invalid/expressions/BooleanAndOrValid.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.expressions;

public class BooleanAndOrValid {
  boolean b = 1 && 2;
  boolean c = "String" || 1.2;
}
